# hoodle-tools

./: build.conf  builddep.sh  hoodle-tools.cabal
exe/: bkgpdfreplace.hs  createpdf.hs  extracttext.hs  filerecurse.hs  hexpattest.hs  hoodle-tools.hs  idfilepathdb.hs  migratehdl.hs  networkedit.hs  openfileurl.hs  updateidmap.hs
lib/: DiffDB.hs
test/: idfilepathdb.hs
