Name:		hoodle-tools
Version:	0.0.999
Synopsis:	hoodle tools 
Description: 	hoodle tools 
Homepage:       http://ianwookim.org/hoodle
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 7.4, GHC == 7.6
Build-Type: 	Custom
Cabal-Version:  >= 1.8
data-files:     
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-tools

Executable bkgpdfreplace
  Main-is: bkgpdfreplace.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all

  Build-Depends:   base == 4.*, 
                   mtl == 2.*,
                   directory == 1.*,
                   filepath == 1.*, 
                   strict == 0.3.*,
                   gtk == 0.12.*, 
                   cairo == 0.12.*,
                   pango == 0.12.*,
                   gd >= 3000.7,               
                   attoparsec == 0.10.*,
                   coroutine-object >= 0.2, 
                   transformers == 0.3.*,
                   transformers-free == 1.0.*,
                   hoodle-types >= 0.1.9999,
                   hoodle-common >= 0.0.999, 
                   hoodle-parser >= 0.1.9999,
                   xournal-parser >= 0.5.0.1,
                   hoodle-render >= 0.2.999,
                   hoodle-builder >= 0.1.9999,
                   containers >= 0.4,
                   template-haskell == 2.*,
                   bytestring >= 0.9, 
                   base64-bytestring >= 0.1,
                   either >= 3.1, 
                   errors >= 1.3, 
                   lens >= 2.5,
                   process >= 1.1, 
                   configurator == 0.2.*,
                   time >= 1.2, 
                   Diff == 0.1.*,
                   dyre >= 0.8.11, 
                   cereal == 0.3.5.*,
                   base64-bytestring >= 0.1, 
                   old-locale >= 1.0, 
                   uuid >= 1.2.7, 
                   poppler >= 0.12.2.2 

Executable idfilepathdb
  Main-is: idfilepathdb.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all

  Build-Depends:   base == 4.*, 
                   mtl == 2.*,
                   directory == 1.*,
                   filepath == 1.*, 
                   strict == 0.3.*,
                   gtk == 0.12.*, 
                   cairo == 0.12.*,
                   pango == 0.12.*,
                   gd >= 3000.7,               
                   attoparsec == 0.10.*,
                   transformers == 0.3.*,
                   transformers-free == 1.0.*,
                   hoodle-types >= 0.1.9999,
                   hoodle-common >= 0.0.999, 
                   hoodle-parser >= 0.1.9999,
                   xournal-parser >= 0.5.0.1,
                   hoodle-render >= 0.2.999,
                   hoodle-builder >= 0.1.9999,
                   containers >= 0.4,
                   template-haskell == 2.*,
                   bytestring >= 0.9, 
                   base64-bytestring >= 0.1,
                   either >= 3.1, 
                   errors >= 1.3, 
                   lens >= 2.5,
                   process >= 1.1, 
                   configurator == 0.2.*,
                   time >= 1.2, 
                   Diff == 0.1.*,
                   dyre >= 0.8.11, 
                   cereal == 0.3.5.*,
                   base64-bytestring >= 0.1, 
                   old-locale >= 1.0, 
                   uuid >= 1.2.7, 
                   poppler >= 0.12.2.2, 
                   unix, 
                   pureMD5

Executable updateidmap 
  Main-is: updateidmap.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all

  Build-Depends:   base == 4.*, 
                   mtl == 2.*,
                   directory == 1.*,
                   filepath == 1.*, 
                   strict == 0.3.*,
                   gtk == 0.12.*, 
                   cairo == 0.12.*,
                   pango == 0.12.*,
                   gd >= 3000.7,               
                   attoparsec == 0.10.*,
                   transformers == 0.3.*,
                   transformers-free == 1.0.*,
                   hoodle-types >= 0.1.9999,
                   hoodle-common >= 0.0.999, 
                   hoodle-parser >= 0.1.9999,
                   xournal-parser >= 0.5.0.1,
                   hoodle-render >= 0.2.999,
                   hoodle-builder >= 0.1.9999,
                   containers >= 0.4,
                   template-haskell == 2.*,
                   bytestring >= 0.9, 
                   base64-bytestring >= 0.1,
                   either >= 3.1, 
                   errors >= 1.3, 
                   lens >= 2.5,
                   process >= 1.1, 
                   configurator == 0.2.*,
                   time >= 1.2, 
                   Diff == 0.1.*,
                   dyre >= 0.8.11, 
                   cereal == 0.3.5.*,
                   base64-bytestring >= 0.1, 
                   old-locale >= 1.0, 
                   uuid >= 1.2.7, 
                   poppler >= 0.12.2.2, 
                   unix, 
                   pureMD5, 
                   fsnotify, 
                   system-filepath, 
                   conduit >= 0.5, 
                   resourcet
