Name:		hoodle-tools
Version:	0.0.999
Synopsis:	hoodle tools 
Description: 	hoodle tools 
Homepage:       http://ianwookim.org/hoodle
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 7.4, GHC == 7.6
Build-Type: 	Custom
Cabal-Version:  >= 1.8
data-files:     
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-tools

Library 
  hs-source-dirs: lib
  ghc-options: -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all

  Build-Depends:   base, 
                   containers,
                   aeson,
                   text, 
                   unordered-containers
  Exposed-Modules: 
                   DiffDB


Executable updateidmap 
  Main-is: updateidmap.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all

  Build-Depends:   base,
                   mtl,
                   directory,
                   filepath,
                   strict,
                   gtk,
                   cairo,
                   pango,
                   gd,
                   attoparsec,
                   transformers,
                   transformers-free,
                   hoodle-types,
                   hoodle-parser,
                   xournal-parser,
                   hoodle-render,
                   hoodle-builder,
                   containers,
                   template-haskell,
                   bytestring,
                   base64-bytestring,
                   either,
                   errors,
                   lens,
                   process,
                   configurator,
                   time,
                   Diff,
                   dyre,
                   cereal,
                   old-locale,
                   uuid,
                   poppler,
                   unix, 
                   pureMD5, 
                   fsnotify, 
                   system-filepath, 
                   conduit,
                   resourcet


Executable bkgpdfreplace
  Main-is: bkgpdfreplace.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base, 
                   directory,
                   filepath, 
                   gtk, 
                   attoparsec,
                   hoodle-types,
                   hoodle-parser,
                   hoodle-builder,
                   containers,
                   bytestring,
                   base64-bytestring,
                   lens,
                   poppler

Executable migratehdl
  Main-is: migratehdl.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -Werror -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all

  Build-Depends:   attoparsec,
                   base,
                   blaze-builder,
                   bytestring,
                   directory,
                   directory-tree,
                   filepath,
                   hoodle-builder,
                   hoodle-core,
                   hoodle-parser,
                   hoodle-render,
                   hoodle-types,
                   mtl,
                   process,
                   uuid,
                   transformers